# Update -- Add Resize Event /  Add Debounce Method

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 <!-- === APPLICATION JS === -->
-<script src="js/wolfe.dev.js"></script>
+<script src="js/app.development.js"></script>
 <script type="text/javascript">
 $( 'body').wolfe({
   notes: true
